Add stream info to media file paths table